# mondrian-art

./: Cargo.toml  README.md  index.html
res/: script.js  style.css
src/: bindings.rs  cell.rs  color.rs  main.rs
