[package]
name = "mondrian-art"
version = "0.1.0"
authors = ["grantranda <48031522+grantranda@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
yew = "0.18"
